test/sema/typeck/const/check-return.dora
const one: Int32 = 1i32;
fn f(): Int64 { return one; }
